--- a/automations/tts/lillhagsskolan_matsedel.yaml
+++ b/automations/tts/lillhagsskolan_matsedel.yaml
@@ -20,3 +20,4 @@ action:
           {{ states('sensor.lillhagsskolan_lunch_fredag') }}  
         {% endif %}
       call_inspirational_quote: 1
+      call_evenice_skola: 1
