--- a/lovelace/floorplan_entreplan.yaml
+++ b/lovelace/floorplan_entreplan.yaml
@@ -165,7 +165,7 @@ elements:
     service: input_select.select_option
     service_data:
       entity_id: input_select.floorplan_floor
-      option: Övervåning
+      option: Källarplan
     style:
       top: 20%
       left: 50%
