--- a/automations/lights/turn_on_lights_when_sunset.yaml
+++ b/automations/lights/turn_on_lights_when_sunset.yaml
@@ -5,8 +5,8 @@ initial_state: 'on'
 trigger:
   platform: state
   entity_id:
-   - device_tracker.evenice_iphone
-   - group.bella_devices
+   - group.devices_evenice
+   - group.devices_bella
    - device_tracker.oskarstelefon
   to: 'home'
 condition:
