--- a/automations/notify/oskar_ica.yaml
+++ b/automations/notify/oskar_ica.yaml
@@ -9,3 +9,7 @@ action:
   - service: notify.adults
     data:
       message: "Oskar är vid ICA Fjällbacken, handla?"
+  - service: tts.google_translate_say
+    entity_id: media_player.tts
+    data:
+     message: "Oskar är vid ICA Fjällbacken, handla skynda hör av dig till honom?"
