--- a/automations/tts/welcome_home_guests.yaml
+++ b/automations/tts/welcome_home_guests.yaml
@@ -42,3 +42,4 @@ action:
         {%- endmacro -%}
         {{- greeting_sentence(person) -}}
       call_inspirational_quote: 1
+      call_evenice_skola: 1
