--- a/components/groups/devices_adults.yaml
+++ b/components/groups/devices_adults.yaml
@@ -1,7 +1,5 @@
 devices_adults:
   name: Enheter
   entities:
-  - device_tracker.oskarstelefon
-  - device_tracker.iphone_7
-  - device_tracker.google_maps_114170795730412573739
-  - device_tracker.bellas_telefon
+  - person.oskar
+  - person.bella
