--- a/automations/lights/turn_on_lights_when_sunset.yaml
+++ b/automations/lights/turn_on_lights_when_sunset.yaml
@@ -4,10 +4,7 @@ id: 'lights when sun is set'
 initial_state: 'on'
 trigger:
   platform: state
-  entity_id:
-   - group.devices_evenice
-   - group.devices_bella
-   - device_tracker.oskarstelefon
+  entity_id: group.devices_adults
   to: 'home'
 condition:
   condition: sun
