--- a/automations/notify/bella_not_home.yaml
+++ b/automations/notify/bella_not_home.yaml
@@ -4,7 +4,7 @@ trigger:
   platform: zone
   event: leave
   zone: zone.home
-  entity_id: device_tracker.bellas_telefon
+  entity_id: person.bella
 action:
   - service: notify.telegram_oskar
     data:
