--- a/lovelace/information.yaml
+++ b/lovelace/information.yaml
@@ -3,6 +3,17 @@ id: information
 icon: mdi:information
 background: center / cover no-repeat url('/local/habakgrounds.jpg')
 cards:
+ - type: custom:calendar-card
+   title: "Kalender"
+   progressBar: true
+   entities:
+    - calendar.familjenkernehed_gmail_com
+    - calendar.f2012_ik_huge_fb
+    - calendar.isabelle_kernehed_gmail_com
+    - calendar.jobb_kalendern
+    - calendar.oskarkernehed_gmail_com
+    - calendar.spelschema_hammarby_if
+    - calendar.hockeyskola_ik_huge_ih
  - type: custom:google-keep-card
    entity: sensor.google_keep_6632ccac8a
    theme: dark
@@ -15,29 +26,17 @@ cards:
  - type: iframe
    url: https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FSamVBomhus%2F&tabs=timeline&width=500&height=650&small_header=true&adapt_container_width=true&hide_cover=true&show_facepile=false&appId
    aspect_ratio: 100%
- - type: custom:pollenkoll-card
-   title: false
-   city: gävle
-   compact: true
-   allergens:
-     - al
-     - alm
-     - björk
-     - ek
-     - gråbo
-     - gräs
-     - hassel
-     - Sälg / vide
-     - Ambrosia
-     
- - type: custom:calendar-card
-   title: "Kalender"
-   progressBar: true
-   entities:
-    - calendar.familjenkernehed_gmail_com
-    - calendar.f2012_ik_huge_fb
-    - calendar.isabelle_kernehed_gmail_com
-    - calendar.jobb_kalendern
-    - calendar.oskarkernehed_gmail_com
-    - calendar.spelschema_hammarby_if
-    - calendar.hockeyskola_ik_huge_ih
+# - type: custom:pollenkoll-card
+#   title: false
+#   city: gävle
+#   compact: true
+#   allergens:
+#     - al
+#     - alm
+#     - björk
+#     - ek
+#     - gråbo
+#     - gräs
+#     - hassel
+#     - Sälg / vide
+#     - Ambrosia    
