--- a/scripts/alarm/ifttt_alarm_clock.yaml
+++ b/scripts/alarm/ifttt_alarm_clock.yaml
@@ -8,17 +8,7 @@ ifttt_alarm_clock:
       entity_id: group.light_sovrummet
       brightness: 255
       transition: 600
-#  - delay: '00:20:30'
-#  - service: media_player.volume_set
-#    entity_id:
-#      - media_player.hallen
-#      - media_player.koket
-#      - media_player.bedroom_mini
-#    data:
-#      volume_level: 0.15
-#  - service: media_player.play_media
-#    data:
-#      entity_id:
-#      - media_player.hallen
-#      media_content_id: !secret content_motivation_mp3
-#      media_content_type: music
+  - service: tv4_play.play_suggested
+    entity_id: media_player.bedroom
+    data:
+      program_name: nyhetsmorgon
