--- a/scripts/tts/speech/good_night_routine.yaml
+++ b/scripts/tts/speech/good_night_routine.yaml
@@ -15,7 +15,7 @@ goodnight_routine:
     entity_id: light.fibaro_system_fgd212_dimmer_2_level
   - service: light.turn_off
     entity_id: light.vardagsrum_spotlights
-  - service: light.turn_off
+  - service: light.turn_on
     entity_id: light.vardagsrum_trapp
   - service: light.turn_off
     entity_id: group.light_kitchen 
