--- a/automations/house/other/sleep_mode.yaml
+++ b/automations/house/other/sleep_mode.yaml
@@ -10,10 +10,12 @@ condition:
   condition: and
   conditions:
     - condition: state
-      entity_id: group.devices_adults
+      entity_id: person.oskar
       state: 'home'
     - condition: time
       after: '20:00:00'
       before: '04:00:00'
+    - condition: template
+      value_template: '{{ as_timestamp(now()) - as_timestamp(states.automation.sleep_mode_on.attributes.last_triggered) | int > 28800 }}'
 action:
   - service: rest_command.sleep_mode
