--- a/templates/speech/macros.yaml
+++ b/templates/speech/macros.yaml
@@ -293,6 +293,11 @@
   {%- macro smhi_alert() -%}
    Lyssna, det är en varning utfärdad av SMHI, Meddelandet kommer här, {{ states.sensor.smhialert.attributes.messages['024']['msgs'][0]['event'] }} {{ states.sensor.smhialert.attributes.messages['024']['msgs'][0]['description'] | regex_replace('Intensitet: |När:*|Var:*|Kommentar:*', '') }}
   {%- endmacro -%}
+
+  {%- macro coronavirus() -%}
+   Och för er information, Det är just nu {{ states.sensor.sweden_coronavirus_confirmed.state }} personer smittade av coronaviruset i Sverige. 
+  {%- endmacro -%}
+   
   {# ********************************************* #}
   {#  ******** Start the Speech routines ********  #}
   {# ********************************************* #}
@@ -378,4 +383,4 @@
 
   
   {# call a Random fact #}
-  {{ ([iss, moon, fodelsedag, arsdag, days_until, smhi_alert]|random)() }}
+  {{ ([iss, moon, fodelsedag, arsdag, days_until, smhi_alert, coronavirus]|random)() }}
