--- a/automations/notify/telegram/Commands/dorrklockan_no_command.yaml
+++ b/automations/notify/telegram/Commands/dorrklockan_no_command.yaml
@@ -6,8 +6,18 @@ trigger:
   event_data:
     command: '/dorrklockan_no'
 action:
+- service: telegram_bot.edit_replymarkup
+  data_template:
+    message_id: '{{ trigger.event.data.message.message_id }}'
+    chat_id: -1001200237113
+    inline_keyboard: 
+#- delay: '00:00:01'
 - service: telegram_bot.send_message
   data_template:
     callback_query_id: '{{ trigger.event.data.id }}'
     target: -1001200237113
     message: '{{ trigger.event.data["from_first"] }} är upptagen, kan någon annan öppna dörren?'
+    inline_keyboard: 
+      - "Öppnar:/dorrklockan_yes"
+      - "Upptagen:/dorrklockan_no"
+      - "Ta bort tangentbordet:/removekeyboard"
