--- a/automations/notify/telegram/Commands/lock_door_command_telegram.yaml
+++ b/automations/notify/telegram/Commands/lock_door_command_telegram.yaml
@@ -15,5 +15,9 @@ action:
   data_template:
     callback_query_id: '{{ trigger.event.data.id }}'
     target: -1001200237113
-    message: 'Okej, {{ trigger.event.data["from_first"] }} låser dörren. Status: {states.lock.polycontrol_danalock_v3_btze_locked.state}'
-
+    message: 'Okej, {{ trigger.event.data["from_first"] }} låser dörren. Status: {{states.lock.polycontrol_danalock_v3_btze_locked.state}}'
+- service: telegram_bot.edit_replymarkup
+  data_template:
+    message_id: '{{ trigger.event.data.message.message_id }}'
+    chat_id: -1001200237113
+    inline_keyboard: 
