--- a/automations/notify/telegram/Commands/milla_dog_food_command.yaml
+++ b/automations/notify/telegram/Commands/milla_dog_food_command.yaml
@@ -6,16 +6,16 @@ trigger:
   event_data:
     command: '/milla_food_yes'
 action:
-#- service: telegram_bot.answer_callback_query
-#  data_template:
-#    callback_query_id: '{{ trigger.event.data.id }}'
-#    message: 'Okej, {{ trigger.event.data["from_first"] }} har fått informationen.'
-#    show_alert: true
 - service: telegram_bot.send_message
   data_template:
     callback_query_id: '{{ trigger.event.data.id }}'
     target: -1001200237113
     message: 'Okej, {{ trigger.event.data["from_first"] }} fixar det.'
+- service: telegram_bot.edit_replymarkup
+  data_template:
+    message_id: '{{ trigger.event.data.message.message_id }}'
+    chat_id: -1001200237113
+    inline_keyboard: 
 - service: tts.google_translate_say
   entity_id: media_player.tts
   data:
