--- a/automations/notify/telegram/Commands/milla_dog_food_no_command.yaml
+++ b/automations/notify/telegram/Commands/milla_dog_food_no_command.yaml
@@ -11,7 +11,13 @@ action:
     callback_query_id: '{{ trigger.event.data.id }}'
     target: -1001200237113
     message: 'Men, enligt {{ trigger.event.data["from_first"] }} har milla redan fått mat.'
+- service: telegram_bot.edit_replymarkup
+  data_template:
+    message_id: '{{ trigger.event.data.message.message_id }}'
+    chat_id: -1001200237113
+    inline_keyboard: 
 - service: tts.google_translate_say
   entity_id: media_player.tts
   data:
    message: 'Men! Milla har redan fått mat!'
+   
