--- a/automations/notify/telegram/Commands/turn_off_boiler.yaml
+++ b/automations/notify/telegram/Commands/turn_off_boiler.yaml
@@ -15,3 +15,8 @@ action:
     callback_query_id: '{{ trigger.event.data.id }}'
     target: -1001200237113
     message: 'Okej, {{ trigger.event.data["from_first"] }} har nu stängt av vattenkokaren.'
+- service: telegram_bot.edit_replymarkup
+  data_template:
+    message_id: '{{ trigger.event.data.message.message_id }}'
+    chat_id: -1001200237113
+    inline_keyboard: 
