--- a/components/plants/flower_1.yaml
+++ b/components/plants/flower_1.yaml
@@ -4,3 +4,4 @@ citronfikus:
     temperature: sensor.flower_1_temperature
     conductivity: sensor.flower_1_conductivity
     brightness: sensor.flower_1_illuminance
+  min_conductivity: 200
