--- a/automations/system/startup_automation.yaml
+++ b/automations/system/startup_automation.yaml
@@ -1,9 +1,10 @@
 alias: 'Set startup theme'
 initial_state: 'on'
 trigger:
-  - platform: time
-    at: '08:00'
+  - platform: homeassistant
+    event: start
 action:
   - service: frontend.set_theme
     data:
       name: darkydark
+  - service: python_script.plant_problems
