--- a/components/sensors/rest/days_until_easter.yaml
+++ b/components/sensors/rest/days_until_easter.yaml
@@ -1,6 +1,6 @@
-platform: rest
-name: Easter Countdown
-resource: !secret wolfram_alpha_easter_api
-value_template: "{{ (value|replace(' days', '')) | int }}"
-unit_of_measurement: Days
-scan_interval: 43200
+#platform: rest
+#name: Easter Countdown
+#resource: !secret wolfram_alpha_easter_api
+#value_template: "{{ (value|replace(' days', '')) | int }}"
+#unit_of_measurement: Days
+#scan_interval: 43200
