--- a/automations/tts/welcome_home.yaml
+++ b/automations/tts/welcome_home.yaml
@@ -8,12 +8,15 @@ trigger:
       - person.evenice
     from: 'not_home'
     to: 'home'
-    for: '00:02:00'
 condition:
   condition: time
   after: '07:00:00'
   before: '19:00:00'
 action:
+  - wait_template: >-
+     {{ states.binary_sensor.front_door_sensor.state == 'on' }}
+    timeout: '00:05:00'
+  - delay: '00:00:30'
   - service: script.speech_engine
     data_template:
       personarriving: >-
