--- a/automations/tts/welcome_home_guests.yaml
+++ b/automations/tts/welcome_home_guests.yaml
@@ -15,6 +15,10 @@ condition:
   after: '07:00:00'
   before: '19:00:00'
 action:
+  - wait_template: >-
+     {{ states.binary_sensor.front_door_sensor.state == 'on' }}
+    timeout: '00:05:00'
+  - delay: '00:00:30'
   - service: script.speech_engine
     data_template:
       personarriving_guests: >-
